<resources>
    <!-- Generic -->
    <string name="app_name">Taxi VIP</string>

    <!-- Login -->
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="receive_password">RECEIVE\nPASSWORD</string>

    <!-- Menu -->
    <string name="menu">MENU</string>
    <string name="ongoing">Ongoing</string>
    <string name="balance">Balance</string>
    <string name="order">Order</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="services">Services</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <!-- Settings -->
    <string name="name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="submit">SUBMIT</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="language">LANGUAGE</string>
    <string name="english">English</string>
    <string name="armenian">Հայերեն</string>
    <string name="russian">Русский</string>

    <!-- Ordering -->
    <string name="now">Now</string>
    <string name="later">Later</string>
    <string name="only_cash">Only Cash</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="comments">Comments</string>
    <string name="confirm">Confirm</string>
    <string name="min">min/</string>
    <string name="one_km">1km/</string>
    <string name="address">Address</string>
    <string name="no_search_results">No Results</string>
    <string name="searching">Searching…</string>
    <string name="type_to_search">Type to Search</string>
    <string name="locating">Locating…</string>

    <!-- Orders List -->
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="no_ongoing_orders">No Ongoing Orders</string>
    <string name="no_history">History is Empty</string>

    <!-- Dialogs -->
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="comments_title">Comments</string>
    <string name="feedback_title">Feedback</string>
    <string name="error_title">Error</string>
    <string name="order_time">Order Time</string>
    <string name="no_internet_description">There is no network connection. If you are not connected to internet, please, tap on button below, navigate to wifi or mobile data settings and select appropriate connection. If that does not help, please contact your network provider. If this issue is recurring, please, contact us.</string>
    <string name="gps_disabled_title">GPS Disabled</string>
    <string name="gps_not_permitted_title">No GPS Permission</string>
    <string name="gps_disabled_message">There is no way we can identify your location. Please, proceed to location settings with button below and enable the location access.</string>
    <string name="gps_not_permitted_message">The application is not permitted to use location data. Please, proceed to application settings below, open permissions and allow location permission.</string>
    <string name="permit">Permit</string>
    <string name="enable">Enable</string>
    <string name="no_internet_title">NETWORK ERROR</string>
    <string name="connect">Connect</string>
    <string name="success">Success</string>
    <string name="you_will_receive_sms">You will soon receive SMS with your new password. If SMS does not arrive, please, check phone number, or contact us.</string>
    <string name="thank_you_for_feedback">Thank you for you feedback.</string>
    <string name="congratulation">Congratulation</string>
    <string name="password_changed">Your password has been changed.</string>
    <string name="info_changed">Your info has been changed.</string>
    <string name="hey">Hey!</string>
    <string name="already_have_orders">You already have %d active orders. Do you really want to do another?</string>
    <string name="coming_soon">Coming Soon…</string>

    <!-- Order -->
    <string name="cost">Cost</string>
    <string name="distance">Distance</string>
    <string name="type">TYPE</string>
    <string name="bonus">+BONUS</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="km">km</string>
    <string name="waiting">Waiting</string>
    <string name="taken">Taken</string>
    <string name="canceled">Canceled</string>
    <string name="finished">Finished</string>
    <string name="not_taken">Not Taken</string>
    <string name="started">Started</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="feedback">Feedback</string>

    <!-- Transactions -->
    <string name="transactions">Transactions</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="loading">Loading</string>
    <string name="no_transaction">No Transactions</string>
    <string name="me">Me</string>
    <string name="driver">Driver</string>

    <!-- Services -->
    <string name="business">Business</string>
    <string name="minivan">Minivan</string>
    <string name="standard">Standard</string>
    <string name="delivery">Delivery</string>

    <!-- Push Notifications -->
    <string name="your_order_taken">Your order has been taken</string>
    <string name="your_order_finished">Your order has been finished</string>
    <string name="your_order_started">Your order has been started</string>
    <string name="your_driver_waiting">Your driver is waiting</string>
    <string name="your_order_not_taken">Your order is still not taken</string>
    <string name="no_car_for_you">Seems there is no car that can serve you at the moment. Please, click \"Retry\" if you want to try ordering again, and \"Ok\" if you want to cancel the order.</string>
    <string name="something_happens">Whoa! Something happens!</string>
    <string name="your_car_will_be_in_minutes">Your car will be in %d minutes</string>

    <!-- Splash Screen -->
    <string name="blazon">The best app for ordering a taxi</string>
    <string name="powered_by">POWERED BY PARADOX LLC</string>

    <!-- Map Controls -->
    <string name="plus">+</string>
    <string name="minus">—</string>

    <!-- Error Messages -->
    <string name="cannot_complete_request_title">Servers unreachable</string>
    <string name="cannot_complete_request_message">Cannot connect to servers. Please, check your internet connection. If issue is recurring, please connect us.</string>
    <string name="server_error_title">Server Error</string>
    <string name="server_error_message">Server is unable to process request. If issue is recurring, please connect us.</string>
    <string name="invalid_data_title">Invalid Data</string>
    <string name="invalid_data_message">Invalid data was sent. Please, check your input. If issue is recurring, please connect us.</string>
    <string name="unknown_error_title">Unknown Error</string>
    <string name="unknown_error_message">Unknown error occurred. If issue is recurring, please, connect us and report following status code - </string>
    <string name="attention">Attention</string>
    <string name="empty_phone_number">Phone number is empty.</string>
    <string name="empty_password">Password is empty.</string>
    <string name="invalid_phone_number">Phone number is invalid. It must contain 8 digits, without the leading zero.</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="phone_pass_combination_wrong">This phone and password combination does not exist. You can get new password for this phone number by clicking \"Receive Password\" button.</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="password_does_not_match">New Password and Confirm Password fields do not match.</string>
    <string name="please_wait_address_determined">Please wait while your address is being determined.</string>
    <string name="sure_to_cancel">Are you sude you want to cancel this order?</string>

    <!-- About Us -->

    <string name="about_us_info">Default about us</string>

    <!-- Services -->

    <string-array name="services_info">
        <item>Default Business Info</item>
        <item>Default Standard Info</item>
        <item>Default Minivan Info</item>
        <item>Default Delivery Info</item>
    </string-array>

    <!-- Help -->

    <string-array name="help_info">
        <item>Default Order Help</item>
        <item>Default Order Details Help</item>
        <item>Default Confirm Help</item>
        <item>Default Driver Details Help</item>
        <item>Default Feedback Help</item>
    </string-array>

    <!-- Icons -->
    <string name="icon_about_us">&#xe900;</string>
    <string name="icon_close">&#xe901;</string>
    <string name="icon_cost">&#xe902;</string>
    <string name="icon_date">&#xe903;</string>
    <string name="icon_distance">&#xe904;</string>
    <string name="icon_exit">&#xe905;</string>
    <string name="icon_favorites">&#xe906;</string>
    <string name="icon_star_filled">&#xe94a;</string>
    <string name="icon_history">&#xe907;</string>
    <string name="icon_location">&#xe908;</string>
    <string name="icon_mail">&#xe909;</string>
    <string name="icon_menu">&#xe90a;</string>
    <string name="icon_name">&#xe90b;</string>
    <string name="icon_order">&#xe90c;</string>
    <string name="icon_password">&#xe90d;</string>
    <string name="icon_phone">&#xe90e;</string>
    <string name="icon_refresh">&#xe90f;</string>
    <string name="icon_services">&#xe910;</string>
    <string name="icon_settings">&#xe911;</string>
    <string name="icon_mobile_phone">&#xe912;</string>
    <string name="icon_arrow">&#xe913;</string>
    <string name="icon_balance">&#xe914;</string>
    <string name="icon_help">&#xe915;</string>
    <string name="icon_status">&#xe916;</string>
    <string name="icon_logo">&#xe917;</string>
    <string name="icon_person_tile">&#xe921;</string>
    <string name="icon_logo_filled">&#xe930;</string>
    <string name="icon_gps">&#xe935;</string>
    <string name="icon_no_gps">&#xe934;</string>
    <string name="icon_gaz">&#xe936;</string>
    <string name="icon_car">&#xe937;</string>
    <string name="icon_gps_tiny">&#xe93e;</string>
    <string name="icon_plus">&#xe93f;</string>
    <string name="icon_minus">&#xe940;</string>

</resources>
