<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingLeft="@dimen/orders_small_margin"
    android:paddingStart="@dimen/orders_small_margin"
    android:paddingRight="@dimen/orders_small_margin"
    android:paddingEnd="@dimen/orders_small_margin"
    android:paddingTop="@dimen/orders_big_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/icon_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_date"
            android:textSize="@dimen/credentials_icon_size"
            android:textColor="@color/cyan_100"
            android:gravity="center"
            android:layout_marginRight="@dimen/orders_tiny_margin"
            android:layout_marginEnd="@dimen/orders_tiny_margin"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="@dimen/orders_name_width"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white_90"
            android:textSize="@dimen/small_text_size"
            android:gravity="center_vertical|start"
            android:layout_marginRight="@dimen/orders_tiny_margin"
            android:layout_marginEnd="@dimen/orders_tiny_margin"/>

        <TextView
            android:id="@+id/date_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white_90"
            android:textSize="@dimen/small_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/orders_small_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_location"
            android:textSize="@dimen/credentials_icon_size"
            android:textColor="@color/cyan_100"
            android:gravity="center"
            android:layout_marginRight="@dimen/orders_tiny_margin"
            android:layout_marginEnd="@dimen/orders_tiny_margin"/>

        <TextView
            android:id="@+id/location"
            android:layout_width="@dimen/orders_name_width"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/white_90"
            android:textSize="@dimen/small_text_size"
            android:gravity="center_vertical|start"
            android:layout_marginRight="@dimen/orders_tiny_margin"
            android:layout_marginEnd="@dimen/orders_tiny_margin"/>

        <TextView
            android:id="@+id/location_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white_90"
            android:textSize="@dimen/small_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/status_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/orders_small_margin"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/icon_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_status"
            android:textColor="@color/cyan_100"
            android:textSize="@dimen/credentials_icon_size"
            android:gravity="center"
            android:layout_marginRight="@dimen/orders_tiny_margin"
            android:layout_marginEnd="@dimen/orders_tiny_margin"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="@dimen/orders_name_width"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/white_90"
            android:textSize="@dimen/small_text_size"
            android:gravity="center_vertical|start"
            android:layout_marginRight="@dimen/orders_tiny_margin"
            android:layout_marginEnd="@dimen/orders_tiny_margin"/>

        <TextView
            android:id="@+id/status_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/white_90"
            android:textSize="@dimen/small_text_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cost_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/orders_small_margin"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/icon_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_cost"
            android:textSize="@dimen/credentials_icon_size"
            android:textColor="@color/cyan_100"
            android:layout_marginRight="@dimen/orders_small_margin"
            android:layout_marginEnd="@dimen/orders_small_margin"/>

        <TextView
            android:id="@+id/cost"
            android:layout_width="@dimen/orders_name_width"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/white_80"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/cost_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/orders_tiny_margin"
                android:layout_marginStart="@dimen/orders_tiny_margin"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/white_80"/>

            <TextView
                android:id="@+id/bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-20dp"
                android:layout_marginStart="-10dp"
                android:layout_marginBottom="-8dp"
                android:layout_above="@id/cost_value"
                android:layout_toRightOf="@id/cost_value"
                android:layout_toEndOf="@id/cost_value"
                android:visibility="gone"
                android:text="@string/bonus"
                android:textSize="@dimen/super_small_text_size"
                android:textColor="@color/yellow"
                android:singleLine="true"
                android:lines="1"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/orders_big_margin">

        <TextView
            android:id="@+id/icon_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_arrow"
            android:textColor="@color/yellow"
            android:textSize="@dimen/medium_text_size"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>

</LinearLayout>
