<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:background="@color/white_100">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.flycode.paradox.taxiuser.layouts.RhombusLayout
            android:id="@+id/control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <com.flycode.paradox.taxiuser.views.RhombusView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:textColor="@color/black_100"
                android:textSize="@dimen/medium_text_size"
                android:textAllCaps="false"/>

            <com.flycode.paradox.taxiuser.views.RhombusView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard"
                android:textColor="@color/black_100"
                android:textSize="@dimen/medium_text_size"
                android:textAllCaps="false"/>

            <com.flycode.paradox.taxiuser.views.RhombusView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minivan"
                android:textColor="@color/black_100"
                android:textSize="@dimen/medium_text_size"
                android:textAllCaps="false"/>

            <com.flycode.paradox.taxiuser.views.RhombusView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textColor="@color/black_100"
                android:textSize="@dimen/medium_text_size"
                android:textAllCaps="false"/>

        </com.flycode.paradox.taxiuser.layouts.RhombusLayout>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_100"
            android:textSize="@dimen/small_text_size"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"/>

    </LinearLayout>

</ScrollView>