<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flycode="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flycode.paradox.taxiuser.layouts.MaximalLinearLayout
        android:id="@+id/dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingTop="25dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:orientation="vertical"
        android:background="@drawable/white_rounded_rect"
        flycode:maxWidth="500dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/no_internet_title"
            android:textSize="@dimen/title_text_size"
            android:textColor="@color/white_80"
            android:gravity="center_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <com.flycode.paradox.taxiuser.views.DegreeView
                android:id="@+id/degree_0"
                android:layout_width="2dp"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                android:background="@color/white_80"/>

            <com.flycode.paradox.taxiuser.views.DegreeView
                android:layout_width="2dp"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                android:rotation="30"
                android:background="@color/white_80"/>

            <com.flycode.paradox.taxiuser.views.DegreeView
                android:layout_width="2dp"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                android:rotation="60"
                android:background="@color/white_80"/>

            <com.flycode.paradox.taxiuser.views.DegreeView
                android:layout_width="2dp"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                android:rotation="-30"
                android:background="@color/white_80"/>

            <com.flycode.paradox.taxiuser.views.DegreeView
                android:layout_width="2dp"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                android:rotation="-60"
                android:background="@color/white_80"/>

            <TextView
                android:id="@+id/gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="70dp"
                android:layout_toRightOf="@id/degree_0"
                android:layout_toEndOf="@id/degree_0"
                android:text="@string/icon_gps"
                android:textColor="@color/cyan_100"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/no_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="70dp"
                android:layout_toLeftOf="@id/degree_0"
                android:layout_toStartOf="@id/degree_0"
                android:text="@string/icon_no_gps"
                android:textColor="#CF102D"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/gaz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/icon_gaz"
                android:textColor="@color/white_100"
                android:textSize="20dp"/>

            <ImageView
                android:id="@+id/slaq"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_alignBottom="@id/no_gps"
                android:layout_centerHorizontal="true"
                android:src="@drawable/slaq"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"/>

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignBottom="@id/no_gps"
                android:layout_centerHorizontal="true"
                android:background="@drawable/white_circle"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="60dp"
            android:text="@string/no_internet_description"
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/white_80"
            android:gravity="center"
            android:background="@android:color/transparent"/>

    </com.flycode.paradox.taxiuser.layouts.MaximalLinearLayout>

    <RelativeLayout
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-2dp"
        android:clickable="true">

        <com.flycode.paradox.taxiuser.views.WhiteRhombusView
            android:layout_width="100dp"
            android:layout_height="100dp"/>

        <TextView
            android:id="@+id/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/connect"
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/black_100"/>

    </RelativeLayout>

</RelativeLayout>
