<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flycode="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.flycode.paradox.taxiuser.layouts.MaximalWidthLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@color/black_65_opaque"
        flycode:maxWidth="400dp"
        android:gravity="center">

        <TextView
            android:id="@+id/order_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/order_time"
            android:textSize="@dimen/settings_title_text_size"
            android:textColor="@color/pure_white"
            android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/day_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.flycode.paradox.taxiuser.views.PublicTimePicker
                    android:id="@+id/time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" />

            </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_30_opaque"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/pure_white"
                android:textAllCaps="false"
                android:background="@android:color/transparent"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white_30_opaque"/>

            <Button
                android:id="@+id/done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/pure_white"
                android:textAllCaps="false"
                android:background="@android:color/transparent"/>

        </LinearLayout>

    </com.flycode.paradox.taxiuser.layouts.MaximalWidthLinearLayout>

</RelativeLayout>